--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -27,11 +27,25 @@
   z-index: 2;
 }
 
-.MovieMusicCard__poster {
-  
-}
-
 .MovieMusicCard__poster__image {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
   height: 100%;
   width: 100%;
+}
+
+.MovieCard {
+  &__poster {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    margin: 0;
+    max-width: 300px;
+    flex: auto;
+  }
+
+  &__content {
+    flex: 1;
+    padding: 12px;
+    padding-right: 24px;
+  }
 }
