--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -1,8 +1,24 @@
-.Timer {
-  
-}
+.Timer {}
 
 .Timer__bar {
   border-radius: 4px;
   height: 8px !important;
+}
+
+.TimerFullscreen {
+  background: rgba(0, 0, 0, .4);
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+
+  &__timer {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 240px;
+    left: 50%;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
