Fix home page style

--- a/src/pages/Page.scss
+++ b/src/pages/Page.scss
@@ -46,10 +46,19 @@
 }
 
 .HomePage {
+  // margin-top: -100px;
   position: relative;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
   &__illustration {
-    opacity: .5;
+    height: 100vh;
+    object-fit: contain;
+    opacity: .2;
     width: 100%;
   }
 
