--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -14,6 +14,13 @@ input:-webkit-autofill:active {
   }
 }
 
+.text--crop {
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  overflow: hidden;
+}
+
 @media screen and (max-width: 600px) {
   .MuiFormControl-root,
   .MuiTextField-root,
