--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -25,6 +25,6 @@ input:-webkit-autofill:active {
   .MuiFormControl-root,
   .MuiTextField-root,
   .MuiButton-root {
-    width: 100%;
+    width: 100% !important;
   }
 }
