--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -1,5 +1,8 @@
 .LoginPage {
   &__cover {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     position: relative;
 
     &::after {
