--- a/src/pages/Page.scss
+++ b/src/pages/Page.scss
@@ -46,12 +46,16 @@
 }
 
 .HomePage {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background: url('../assets/images/cinema.png');
+  bottom: 0;
+  left: 0;
   overflow: hidden;
   position: fixed;
-  top: 0;
-  left: 0;
   right: 0;
-  bottom: 0;
+  top: 0;
 
   &__illustration {
     height: 100vh;
