Fix header icon

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,6 +28,12 @@
   }
 }
 
+.Header__nav_desktop {
+  .MuiSvgIcon-root {
+    transform: translateY(-2px);
+  }
+}
+
 @media screen and (max-width: 600px) {
   .Header__logo {
     height: 16px;
