Improve suggest form

--- a/src/pages/Page.scss
+++ b/src/pages/Page.scss
@@ -27,7 +27,7 @@
       bottom: 0;
       content: '';
       left: 0;
-      opacity: 0.7;
+      opacity: 0.9;
       position: absolute;
       right: 0;
       top: 0;
@@ -40,7 +40,7 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 260px;
+    width: 90%;
     z-index: 2;
   }
 }
