--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -22,7 +22,31 @@ input:-webkit-autofill:active {
 }
 
 .CookieConsent__overlay {
+  position: fixed;
   z-index: 1200 !important;
+}
+
+.overlay-cookie {
+  // position: fixed;
+  overflow: hidden;
+  height: 100%;
+  overflow: hidden;
+
+  &::after {
+    content: '';
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1101;
+  }
+}
+
+.CookieConsentBanner {
+  position: relative;
+  z-index: 1200;
 }
 
 @media screen and (max-width: 600px) {
